--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = ['fengkao.lrc','goodluck.lrc','shangxia.lrc'];
+        let lyrics = ['fengkao','goodluck','shangxia'];
 
         function loadSong() {
             const selectedSong = songSelect.value;
