feat(歌曲播放器): 优化歌词显示和滚动功能
- 移除了不必要的 meta 标签
- 初始化歌词数组为空，以便动态加载歌词
- 新增 scrollLyricIntoView 函数，确保当前高亮的歌词始终在视口中央
- 在播放歌曲时，自动滚动到当前播放的歌词位置

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>歌曲播放器</title>
     <style>
         body {
@@ -66,7 +65,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = ['fengkao','goodluck','shangxia'];
+        let lyrics = [];
 
         function loadSong() {
             const selectedSong = songSelect.value;
@@ -139,10 +138,28 @@
             lyricsDisplay.querySelectorAll('p').forEach((p, index) => {
                 if (index === previousLyricIndex) {
                     p.classList.add('highlight');
+                    scrollLyricIntoView(p);
                 } else {
                     p.classList.remove('highlight');
                 }
             });
+        }
+
+        function scrollLyricIntoView(highlightedLyric) {
+            if (!highlightedLyric) return;
+
+            const lyricsContainer = lyricsDisplay;
+            const containerHeight = lyricsContainer.clientHeight;
+            const lyricHeight = highlightedLyric.clientHeight;
+            const lyricTop = highlightedLyric.offsetTop;
+            const lyricBottom = lyricTop + lyricHeight;
+            const containerScrollTop = lyricsContainer.scrollTop;
+
+            // Check if the highlighted lyric is out of view
+            if (lyricTop < containerScrollTop || lyricBottom > containerScrollTop + containerHeight) {
+                // Scroll to the highlighted lyric
+                lyricsContainer.scrollTop = lyricTop - (containerHeight - lyricHeight) / 2;
+            }
         }
 
         function nextSong() {
