--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = ['fengkao', 'goodluck', 'shangxia.lrc'];
+        let lyrics = ['fengkao', 'goodluck', 'shangxia'];
 
         function loadSong() {
             const selectedSong = songSelect.value;
