refactor(index): 优化歌词滚动速度
- 将 lyrics 数组声明从 let 改为 const，提高代码可读性
- 调整歌词滚动逻辑，使滚动速度更平滑

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = ['fengkao', 'goodluck', 'shangxia'];
+        const lyrics = ['fengkao', 'goodluck', 'shangxia'];
 
         function loadSong() {
             const selectedSong = songSelect.value;
@@ -158,7 +158,7 @@
             // Check if the highlighted lyric is out of view
             if (lyricTop < containerScrollTop || lyricBottom > containerScrollTop + containerHeight) {
                 // Scroll to the highlighted lyric
-                lyricsContainer.scrollTop = lyricTop - (containerHeight - lyricHeight) / 2;
+                lyricsContainer.scrollTop = lyricTop - (containerHeight - lyricHeight) / 5;
             }
         }
 
