feat(lyrics): 优化歌词滚动功能
- 移除原始歌词数组，改为使用空数组初始化
- 实现歌词居中显示的滚动效果
- 添加平滑滚动功能，提升用户体验
滚动逻辑调整：

在scrollLyricIntoView函数中，计算歌词显示区域的中心位置。
计算目标滚动位置，使高亮的歌词行居中显示。
使用scrollTo方法进行平滑滚动，确保滚动效果更自然。
平滑滚动：

使用scrollTo方法的behavior: 'smooth'选项，使滚动过程更加平滑。

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        const lyrics = ['fengkao', 'goodluck', 'shangxia'];
+        let lyrics = [];
 
         function loadSong() {
             const selectedSong = songSelect.value;
@@ -155,11 +155,17 @@
             const lyricBottom = lyricTop + lyricHeight;
             const containerScrollTop = lyricsContainer.scrollTop;
 
-            // Check if the highlighted lyric is out of view
-            if (lyricTop < containerScrollTop || lyricBottom > containerScrollTop + containerHeight) {
-                // Scroll to the highlighted lyric
-                lyricsContainer.scrollTop = lyricTop - (containerHeight - lyricHeight) / 5;
-            }
+            // Calculate the center position of the container
+            const centerPosition = containerScrollTop + containerHeight / 2;
+
+            // Calculate the target scroll position to center the highlighted lyric
+            const targetScrollTop = lyricTop - (containerHeight - lyricHeight) / 2;
+
+            // Smooth scroll to the target position
+            lyricsContainer.scrollTo({
+                top: targetScrollTop,
+                behavior: 'smooth'
+            });
         }
 
         function nextSong() {
