feat: 初始化歌词数组
- 将歌词数组从空数组修改为包含所有歌曲的.lrc文件名
- 这个修改可以简化后续处理歌词文件的逻辑，提高代码的可维护性

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = [];
+        let lyrics = songs.map(song => `${song}.lrc`);
 
         function loadSong() {
             const selectedSong = songSelect.value;
