--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             const containerScrollTop = lyricsContainer.scrollTop;
 
             // Calculate the center position of the container
-            const centerPosition = containerScrollTop + containerHeight / 2000;
+            const centerPosition = containerScrollTop + containerHeight;
 
             // Calculate the target scroll position to center the highlighted lyric
-            const targetScrollTop = lyricTop - (containerHeight - lyricHeight) / 2000;
+            const targetScrollTop = lyricTop - (containerHeight - lyricHeight);
 
             // Smooth scroll to the target position
             lyricsContainer.scrollTo({
