--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             border: 2px solid #ddd;
             padding: 10px;
             border-radius: 5px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* 3列 */
+            gap: 20px;
+        }
+        #lyrics-display p {
+            margin: 0;
         }
         .highlight {
             color: #ff6347;
@@ -65,7 +71,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = songs.map(song => `${song}.lrc`);
+        let lyrics = [];
 
         function loadSong() {
             const selectedSong = songSelect.value;
@@ -156,10 +162,10 @@
             const containerScrollTop = lyricsContainer.scrollTop;
 
             // Calculate the center position of the container
-            const centerPosition = containerScrollTop + containerHeight;
+            const centerPosition = containerScrollTop + containerHeight / 2;
 
             // Calculate the target scroll position to center the highlighted lyric
-            const targetScrollTop = lyricTop - (containerHeight - lyricHeight);
+            const targetScrollTop = lyricTop - (containerHeight - lyricHeight) / 2;
 
             // Smooth scroll to the target position
             lyricsContainer.scrollTo({
