--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = ['fengkao', 'goodluck', 'shangxia'];
+        let lyrics = [];
 
         function loadSong() {
             const selectedSong = songSelect.value;
