--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         const songs = ['fengkao', 'goodluck', 'shangxia'];
         let currentSongIndex = -1;
         let loopList = false;
-        let lyrics = songs.map(song => `${song}.lrc`);
+        let lyrics = ['fengkao', 'goodluck', 'shangxia'];
 
         function loadSong() {
             const selectedSong = songSelect.value;
