feat: 播放歌曲时同步更新歌曲选择
- 在播放歌曲时，如果启用了循环播放且当前歌曲索引有效，则自动更新歌曲选择下拉框
- 优化了用户界面的交互体验，确保歌曲播放与选择保持同步

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         }
 
         audioPlayer.addEventListener('ended', nextSong);
+        audioPlayer.addEventListener('play', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
     </script>
 </body>
 </html>
