refactor: 优化音频播放器的事件处理
- 添加了多个音频播放器事件监听器，包括 pause、volumechange、error 等
- 在每个事件处理函数中添加了相同的逻辑，确保在循环列表播放时正确更新歌曲选择
- 最后添加了 audioPlayer.play() 方法自动播放音频

--- a/index.html
+++ b/index.html
@@ -86,6 +86,92 @@
                 songSelect.value = songs[currentSongIndex];
             }
         });
+        audioPlayer.addEventListener('pause', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('volumechange', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('error', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('timeupdate', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('seeked', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('ratechange', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('durationchange', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('loadedmetadata', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('emptied', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('stalled', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('suspend', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('abort', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('canplay', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('canplaythrough', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('progress', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('waiting', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.addEventListener('loadeddata', () => {
+            if (loopList && currentSongIndex !== -1) {
+                songSelect.value = songs[currentSongIndex];
+            }
+        });
+        audioPlayer.play();
     </script>
 </body>
 </html>
